fix: remove blank spacing from panel icons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
 #ddterm-panel-icon > StIcon {
     -st-icon-style: symbolic;
 }
+
+.indicator-icon {
+  padding: 0px;
+  margin: 0px;
+}
